src/test/deca/context/valid/test_init_compatible_int.deca
// Description:
//   Initialisation d'une variable de type int
//
// Resultats:
//
// Historique:
//    cree le 01/01/2024

{
   int x = 1 ;
}
